
2010-06-28  Holger Vogt
 * bsim3/b3set.c b3ld.c bsim3def.h: new preproc flag USE_OMP3
 * bsim4/b4set.c b4ld.c bsim4def.h: OpenMP support for BSIM4 model

2010-06-27  Robert Larice
 * src/xspice/enh/enhtrans.c:
	drop useless cast of a copy() return value

2010-06-27  Holger Vogt
 * numparam.h: short replaced by int

2010-06-27  Robert Larice
 * src/ciderlib/support/database.c,
 * src/frontend/com_let.c,
 * src/frontend/define.c,
 * src/frontend/gens.c,
 * src/frontend/plotting/graphdb.c,
 * src/frontend/plotting/plotcurv.c,
 * src/frontend/plotting/plotit.c,
 * src/frontend/postcoms.c,
 * src/frontend/vectors.c,
 * src/maths/poly/interpolate.c,
 * src/spicelib/analysis/dctran.c,
 * src/spicelib/analysis/dctrcurv.c,
 * src/spicelib/devices/nbjt/nbjtset.c,
 * src/spicelib/devices/nbjt/nbjttemp.c,
 * src/spicelib/devices/nbjt2/nbt2set.c,
 * src/spicelib/devices/nbjt2/nbt2temp.c,
 * src/spicelib/devices/numd/numdset.c,
 * src/spicelib/devices/numd/numdtemp.c,
 * src/spicelib/devices/numd2/nud2set.c,
 * src/spicelib/devices/numd2/nud2temp.c,
 * src/spicelib/devices/numos/nummset.c,
 * src/spicelib/devices/numos/nummtemp.c :
	drop the casts for pointer arguments of bcopy() and bzero()
	  their arguments are declared to be void pointers.
	FIXME, src/frontend/vectors.c vec_mkfamily()
	  ugly and propably simply incorrect pointer bistromatic,
	  allocating v_realdata, but copying to v_compdata
	  I left that one untouched, to be fixed later.

2010-06-27  Robert Larice
 * src/frontend/arg.c,
 * src/frontend/arg.h,
 * src/include/fteext.h :
	function arg_display()
	  change the arguments from none, to two unused args.
	  as to fit with struct comm.co_argfn function pointer
	add unused attribute later.

2010-06-27  Robert Larice
 * src/include/ipcproto.h,
 * src/xspice/cmpp/ifs_yacc.y,
 * src/xspice/cmpp/mod_yacc.y,
 * src/xspice/cmpp/pp_mod.c,
 * src/xspice/cmpp/read_ifs.c :
	ansi function declarations (prototypes)

2010-06-27  Robert Larice
 * src/main.c,