@@ -330,7 +330,7 @@ inp_spsource(FILE *fp, bool comfile, char *filename)
 
    /* read in the deck from a file */
    char *filename_dup = ( filename == NULL ) ? strdup(".") : strdup(filename);
-   inp_readall(fp, &deck, 0, dirname(filename_dup));
+   inp_readall(fp, &deck, 0, dirname(filename_dup), comfile);
    tfree(filename_dup);
 
    /* if nothing came back from inp_readall, just close fp and return to caller */
