@@ -7,7 +7,7 @@
 #define INPCOM_H_INCLUDED
 
 FILE * inp_pathopen(char *name, char *mode);
-void inp_readall(FILE *fp, struct line **data, int, char *dirname);
+void inp_readall(FILE *fp, struct line **data, int, char *dirname, bool comfile);
 void inp_casefix(register char *string);
 
 #endif
